# NREL-modern-data

./: AUTHORS.md  CITATION.cff  README.md  pyproject.toml
src/: mylib.py
src/nsrdb/: core.py
