[build-system]
requires = [
  "setuptools >= 61",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'

[project]
name="NREL-Modern-Data"
dynamic = ["version"]
description = "Migrating NREL datasets to conform with modern data standards and best practices."
readme = "README.md"
authors = [
  {name = "Guilherme Castelão", email = "gpimenta@nrel.gov"},
  {name = "Paul Pinchuk", email = "ppinchuk@nrel.gov"},
]
maintainers = [
  {name = "Guilherme Castelão", email = "gpimenta@nrel.gov"},
]
license = "BSD-3-Clause"
keywords = ["NREL", "best practices"]
requires-python = ">= 3.12"
classifiers=[
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "click>=8.0.0",
  "dask>=2024.8.1,<2026",
  "dask-labextension>=7.0.0,<8",
  "h5py>=3.8.0,<4",
  "jupyterlab>=4.3.4,<5",
  "ipython>=8.31.0,<9",
  "matplotlib>=3.9.1,<4",
  "netcdf4>=1.6.3,<2",
  "nodejs>=18.15.0,<22.14",
  "nrel-rex>=0.2.84,<0.3",
  "scipy>=1.15.1,<2",
  "xarray>=2025.1.1,<2026",
  # For now, the required crc32c is not available in conda-forge for linux-arrch64
  "crc32c>=2.7.1, <3",
  "numcodecs>=0.15.0, <0.16",
  "zarr>=3.0",
]

[project.optional-dependencies]
dev = [
  "ipython>=8.29",
  "pre-commit>=4.0",
  "ruff>=0.7",
  "uv>=0.7",
]
doc = [
  "make>=0.1",
  "ghp-import>=2.1",
  "numpydoc>=1.6",
  "pandoc>=2.3",
  "sphinx>=7.2",
  "sphinx-click>=5.1",
  "sphinx-tabs>=3.4",
  "sphinx-copybutton>=0.5",
  "pydata-sphinx-theme>=0.15",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.5.0",
]

[project.urls]
homepage = "https://github.com/castelao/NREL-modern-data"
documentation = "https://github.com/castelao/NREL-modern-data"
repository = "https://github.com/castelao/NREL-modern-data"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C", # Pylint: Convention
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "COM", # flake8-commas
  "D", # pydocstyle
  "E", # pydoctstyle, Error
  "EM", # flake8-errmsg
  "F", # Pyflakes
  "FURB", # refurb
  "FLY", #  flynt
  "G", # flake8-logging-format
  "I", # isort
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # numpy-specific
  "PD", # pandas-vet
  "PERF", # Perflint
  "PIE", # flake8-pie
  "PL", # Pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports (absolute imports)
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W" # Warning
]
ignore = [
  "D400", # first-line-should-end-with-a-period
  "COM812" # missing-trailing-comma (incompatible with formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 10

[tool.setuptools]
packages = ["nrel_modern_data"]

[tool.setuptools_scm]
version_file = "nrel_modern_data/_version.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
nrel_modern_data = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "doc", "test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.dev.tasks]
tests = "pytest --durations=20 tests"

[tool.pixi.dependencies]
python = ">=3.11.0"
dask = ">=2024.8.1,<2026"
dask-labextension = ">=7.0.0,<8"
h5py = ">=3.8.0,<4"
jupyterlab = ">=4.3.4,<5"
ipython = ">=8.31.0,<9"
matplotlib = ">=3.9.1,<4"
netcdf4 = ">=1.6.3,<2"
nodejs = ">=18.15.0,<22.14"
nrel-rex = ">=0.2.84,<0.3"
scipy = ">=1.15.1,<2"
xarray = ">=2025.1.1,<2026"

[tool.pixi.feature.dev.dependencies]
ipython = ">=8.28.0,<9"
pre-commit = ">=4.0.1,<5"
ruff = ">=0.7.1,<0.8"
twine = ">=5.1.1,<6"
uv = ">=0.7.6,<0.8"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.2,<9"
pytest-cov = ">=3.0"
pytest-xdist = ">=3.0"
tox = ">=4.21.2,<5"

[tool.pixi.feature.doc.dependencies]
sphinx = ">=7.0"
sphinx_rtd_theme = ">=2.0"
